# waifu-vault-cli

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: cli.rs  commands.rs  main.rs
src/api/: mod.rs  types.rs
