[package]
name = "waifu-vault-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wvc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
