[package]
name = "waifu-vault-client"
version = "0.1.0"
edition = "2021"
authors = ["Graham Keenan graham.keenan@outlook.com"]
license = "MIT OR Apache-2.0"
description = "CLI application to interact with the Waifu Vault API"
readme = "README.md"
homepage = "https://waifuvault.moe/"
repository = "https://github.com/Tyrannican/waifu-vault-cli"
keywords = ["cli", "api", "file-storage"]
categories = ["command-line-utilities"]

[[bin]]
name = "wvc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.11.24", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
